# fullstack.rs

./: .travis.yml  README.md  data2db.sql  docker-compose.yml  parse2sql.py  prometheus.yml
backend/: .env  Cargo.toml  Dockerfile  README.md
backend/migrations/2019-12-18-051512_create_members/: up.sql
backend/migrations/2019-12-21-060729_create_members/: down.sql
backend/src/: graphql_schema.rs  main.rs  schema.rs
backend/src/utils/: jwt.rs
frontend/: Cargo.toml
