[package]
name = "frontend"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = "1"
serde_derive = "1"
yew = "0.10.1"